@@ -1,7 +1,8 @@
 fgdiag (0.2.45) UNRELEASED; urgency=low
 
   [ Ryan Niebur ]
-  * Work In Progress: Timeout (#27911)
+  * Implement DISKTEST_TIME_LIMIT_PER_GB=6 to limit drive tests to 6
+    minutes per gigabyte of storage and abort the test (Closes: #27911)
   * add fake_test_bin/quicktest.sh, which can be used on a xen virtual
     machine to very easily test disktest (smartctl and lshw have
     problems normally)
